[package]
name = "van-editor"
version = "0.6.0"
edition = "2024"
description = "Van(formely: VimnANo) is a simple rust code editor with advanced vim-like features."
license = "GPL-3.0-only"
repository = "https://github.com/germanphoneguy/van"
readme = "README.md"
keywords = ["editor", "terminal", "groq", "rust", "lightweight"]
categories = ["command-line-utilities", "text-editors"]

[[bin]]
name = "van"
path = "src/main.rs"

[dependencies]
crossterm = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
memmap2 = "0.9"
keyring = "3"
